<resources>
    <string name="app_name">LanguageSettings</string>
    <string name="title">What is Lorem Ipsum</string>
    <string name="body"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="titlebar">Settings</string>
    <string name="language">Language</string>
    <string name="date_amp_time">Date &amp; Time</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="powered_by">POWERED BY</string>
    <string name="prefferedlang">Preferred Language</string>
    <string name="setting_language">Setting language...</string>

</resources>